--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "faker": "^4.1.0",
     "knex": "^0.12.9",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "mocha": "^3.3.0"
+    "mocha": "^3.3.0",
+    "nodemon": "^1.11.0"
   }
 }
